@@ -22,7 +22,7 @@ distrib: FORCE
 	cd mnemosyne/pyqt_ui ; make
 
 	mkdir distrib
-	cp setup.py README LICENSE AUTHORS ChangeLog distrib
+	cp setup.py README LICENSE AUTHORS ChangeLog mnemosyne.desktop distrib
 
 	mkdir distrib/mnemosyne
 	cp mnemosyne/*.py distrib/mnemosyne
@@ -35,8 +35,8 @@ distrib: FORCE
 	cp mnemosyne/pyqt_ui/*.ui distrib/mnemosyne/pyqt_ui
 	cp mnemosyne/pyqt_ui/mnemosyne distrib/mnemosyne/pyqt_ui
 
-	#mkdir distrib/pixmaps
-	#cp pixmaps/*.png distrib/pixmaps
+	mkdir distrib/pixmaps
+	cp pixmaps/mnemosyne.png distrib/pixmaps
 
 	V=`python mnemosyne/version.py` && mv distrib mnemosyne-$${V}
 
